[metadata]
name = github-webhook-proxy
summary = Proxy github webhook requests to a number of different handlers
description-file =
    README.rst
author = Jamie Lennox
author-email = jamielennox@gmail.com
home-page = https://github.com/bonnyci/github-webhook-proxy
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    github_webhook_proxy

[entry_points]
wsgi_scripts =
    github-webhook-proxy = github_webhook_proxy.application:initialize_application
